force-app/main/default/objects/Future_Price__c/Future_Price__c.object-meta.xml
<CustomObject>
    <description>Object contains all of the Future Prices to be applied to Products (Product2) on specified Effective Dates</description>
    <label>Future Price</label>
    <nameField>
        <displayFormat>FP-{0}</displayFormat>
        <label>Future Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Future Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>