force-app/main/default/objects/Future_Price__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the Future Price is available to be evaluated for applying Future Price to Product.  Value should be TRUE or FALSE, defaulted to TRUE.
Field Type: IA
Integrated: Y&quot;</description>
    <inlineHelpText>Indicates if the Future Price is available to be evaluated for applying Future Price to Product.  Value should be TRUE or FALSE, defaulted to TRUE.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>