force-app/main/default/objects/Future_Price__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Indicates the date that the Future Price should be applied to the Product (Product2).
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Indicates the date that the Future Price should be applied to the Product (Product2).</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>