force-app/main/default/objects/Future_Price__c/fields/MSRP__c.field-meta.xml
<CustomField>
    <fullName>MSRP__c</fullName>
    <description>Indicates the MRSP value of the related Product for Future Price.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Indicates the MRSP value of the related Product for Future Price.</inlineHelpText>
    <label>MSRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>