force-app/main/default/objects/Future_Price__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates relationship of Future Price to Product (Product2) to apply Future Price.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Indicates relationship of Future Price to Product (Product2) to apply Future Price.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Future Prices</relationshipLabel>
    <relationshipName>Future_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>