force-app/main/default/objects/Future_Price__c/fields/RWS_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>RWS_Last_Updated_Date__c</fullName>
    <description>Last Updated Date for Mulesoft</description>
    <inlineHelpText>Last Updated Date for Mulesoft</inlineHelpText>
    <label>RWS Last Updated Date</label>
    <type>DateTime</type>
</CustomField>