force-app/main/default/objects/Future_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RWS_Id__c</columns>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Active__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>